[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Maps/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Buttons/blue_button12.png" type="Texture" id=3]
[ext_resource path="res://Assets/Towers/towerDefense_tile251.png" type="Texture" id=4]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=10]
[ext_resource path="res://Resources/Fonts/kfn_30_o1.tres" type="DynamicFont" id=11]
[ext_resource path="res://Resources/Fonts/kfn_50_o1.tres" type="DynamicFont" id=12]
[ext_resource path="res://Assets/Audio/House In a Forest Loop.ogg" type="AudioStream" id=15]

[node name="GameScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SpeedUp" type="TextureButton" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -75.0
margin_top = 55.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
expand = true

[node name="PausePlay" type="TextureButton" parent="UI/HUD"]
pause_mode = 2
margin_left = 1136.0
margin_top = 57.0
margin_right = 1206.0
margin_bottom = 127.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 57.0

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.47451 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 64 )

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/H"]
margin_top = 2.0
margin_right = 50.0
margin_bottom = 62.0
rect_min_size = Vector2( 50, 60 )
custom_fonts/font = ExtResource( 12 )
text = "$"
align = 2
valign = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 54.0
margin_top = 2.0
margin_right = 164.0
margin_bottom = 62.0
rect_min_size = Vector2( 110, 60 )
custom_fonts/font = ExtResource( 11 )
text = "100"
align = 2
valign = 1

[node name="Control3" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 168.0
margin_right = 228.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 0 )

[node name="NextWave" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 232.0
margin_top = 2.0
margin_right = 426.0
margin_bottom = 62.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 11 )
text = "Next Wave:"
align = 1
valign = 1

[node name="NextWaveTexture" type="TextureRect" parent="UI/HUD/InfoBar/H"]
margin_left = 430.0
margin_top = 2.0
margin_right = 490.0
margin_bottom = 62.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
size_flags_vertical = 4
expand = true

[node name="Control2" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 494.0
margin_right = 554.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 0 )

[node name="TimeLabel" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 558.0
margin_top = 2.0
margin_right = 644.0
margin_bottom = 62.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 11 )
text = "Time:"
valign = 1

[node name="TimeRemaining" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 648.0
margin_top = 2.0
margin_right = 708.0
margin_bottom = 62.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 11 )
text = "30"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="UI/HUD/InfoBar/H/TimeRemaining"]

[node name="Life" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 786.0
margin_top = 2.0
margin_right = 862.0
margin_bottom = 62.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 11 )
text = "Life"
align = 1
valign = 1

[node name="HP" type="TextureProgress" parent="UI/HUD/InfoBar/H"]
margin_left = 866.0
margin_top = 17.0
margin_right = 1266.0
margin_bottom = 47.0
rect_min_size = Vector2( 400, 30 )
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0.203922, 0.203922, 0.203922, 1 )
tint_progress = Color( 0.054902, 0.992157, 0.156863, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/H/HP"]

[node name="Control" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 1270.0
margin_right = 1280.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 0 )

[node name="StartWave" type="Button" parent="UI/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -20.5
margin_right = 124.5
margin_bottom = 20.5
custom_fonts/font = ExtResource( 11 )
text = "Start Wave"

[node name="GameOver" type="Label" parent="UI/HUD"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -28.5
margin_right = 150.0
margin_bottom = 28.5
custom_fonts/font = ExtResource( 12 )
text = "GAME OVER"

[node name="PlayerHUDBackground" type="ColorRect" parent="UI/HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -144.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 79 )
color = Color( 0.152344, 0.148178, 0.148178, 1 )

[node name="PlayerHUD" type="HBoxContainer" parent="UI/HUD"]
light_mask = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -144.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 116 )
alignment = 1

[node name="BuildBar" type="HBoxContainer" parent="UI/HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -144.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 67 )
custom_constants/separation = 25
alignment = 1

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 547.0
margin_top = 32.0
margin_right = 627.0
margin_bottom = 112.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 5 )

[node name="Cost" type="Label" parent="UI/HUD/BuildBar/Gun"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_bottom = 35.0
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 1

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 652.0
margin_top = 32.0
margin_right = 732.0
margin_bottom = 112.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Missile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 4 )

[node name="Cost" type="Label" parent="UI/HUD/BuildBar/Missile"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_bottom = 35.0
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -38.454

[connection signal="pressed" from="UI/HUD/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
[connection signal="pressed" from="UI/HUD/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="timeout" from="UI/HUD/InfoBar/H/TimeRemaining/Timer" to="UI" method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/HUD/StartWave" to="UI" method="_on_StartWave_pressed"]
